--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,7 @@ phases:
   build:
     commands:
       - echo "Entering the build phase..."
-      - mvn clean
+      - mvn clean package
 
   post_build:
     commands:
