--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,9 +1,12 @@
 version: 0.2
 
 phases:
+  install:
+    runtime-versions:
+      java: 17
   build:
     commands:
-      - java -version
+      - mvn compile
 
   post_build:
     commands:
