--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,12 +1,9 @@
 version: 0.2
 
 phases:
-  install:
-    runtime-versions:
-      java: corretto17
   build:
     commands:
-      - mvn compile
+      - mvn clean package
 
   post_build:
     commands:
