--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,5 +11,5 @@ phases:
 
 artifacts:
   files:
-    - target/testDeployment-0.0.1-SNAPSHOT.jar
-  discard-paths: true
+    - dist/*
+  discard-paths: yes
