--- a/pom.xml
+++ b/pom.xml
@@ -41,8 +41,8 @@
 	</dependencies>
 
 	<build>
+		<finalName>test-deployment</finalName>
 		<plugins>
-			<!-- Spring Boot Maven Plugin -->
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
