--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,31 +1,11 @@
 version: 0.2
 
 phases:
-  install:
-    runtime-versions:
-      java: corretto11
-    commands:
-      - echo "Install Phase: Installing dependencies..."
-
-  pre_build:
-    commands:
-      - echo "Pre-Build Phase: Nothing to do..."
-
   build:
     commands:
-      - echo "Build Phase: Building Spring Boot application..."
-      - mvn clean install -DskipTests=true
-      # Hier wird das Maven-Projekt gebaut und das JAR-Paket erstellt
-      - mv target/*.jar application.jar
-      # Du kannst den Namen der JAR-Datei hier entsprechend anpassen, wenn nötig
-
-  post_build:
-    commands:
-      - echo "Post-Build Phase: Uploading artifact..."
-      - mv application.jar build/
-      # Verschiebe die JAR-Datei in ein Verzeichnis "build" im Arbeitsverzeichnis
+      - mvn clean package
 
 artifacts:
   files:
-    - build/application.jar
-  discard-paths: yes
+    - target/*.jar
+  discard-paths: true
