--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,7 +1,16 @@
 version: 0.2
 
 phases:
+
   build:
+    commands:
+      - mvn build
+
+  test:
+    commands:
+      - mvn test
+
+  package:
     commands:
       - mvn clean package
       - mkdir artifacts
